# restpylot

./: .gitignore  README.md  pyproject.toml
.github/workflows/: get_dependencies.py  get_version.py  python-package.yml
src/restpylot/: __init__.py  main.py
tests/: test_rest_client.py  unit_test.py
