[tool.poetry]
name = "restpylot"
version = "0.1.3"
description = "A lightweight, flexible REST API client library with support for session management, multiple authentication methods (Bearer tokens, API keys, custom auth), file downloads with streaming, comprehensive error handling, and integrated debug logging."
authors = ["Oliver Galbraith <olivergalbraith0@gmail.com>"]
license = "GPL-3.0"
readme = "README.md"
homepage = "https://github.com/ollie-galbraith/restpylot"
repository = "https://github.com/ollie-galbraith/restpylot"
documentation = "https://github.com/ollie-galbraith/restpylot"

packages = [
    { include = "restpylot", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.31.0"
acme = "^2.0.0"
cryptography = "^39.0.1"

[tool.poetry.group.devs.dependencies]
pytest = "^6.2.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"